--- a/index.html
+++ b/index.html
@@ -1,88 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>1440TIME™ Token Dashboard</title>
   <style>
     body {
-      background: #111;
+      background-color: #111;
       color: #0ff;
-      font-family: monospace;
-      padding: 2rem;
+      font-family: 'Courier New', Courier, monospace;
+      padding: 20px;
     }
     h1 {
-      color: #ff0;
+      color: gold;
     }
-    pre {
-      font-size: 1.1rem;
+    label, input, textarea {
+      display: block;
+      margin: 10px 0;
+      font-size: 1rem;
+    }
+    input, textarea {
+      padding: 5px;
+      width: 300px;
+    }
+    button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #0ff;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .output {
+      margin-top: 30px;
+      background: #000;
+      padding: 20px;
+      border: 1px solid #0ff;
     }
   </style>
 </head>
 <body>
   <h1>⏳ 1440TIME™ Token Dashboard</h1>
-  <pre id="dashboard">Loading...</pre>
+  <p>🎟️ Enter your ticket into the great game of life:</p>
+
+  <label for="wage">💵 Hourly Wage:</label>
+  <input type="number" id="wage" value="0" />
+
+  <label for="sleep">😴 Sleep Hours:</label>
+  <input type="number" id="sleep" value="0" />
+
+  <label for="work">💼 Work Hours:</label>
+  <input type="number" id="work" value="0" />
+
+  <label for="vault">🔒 Vault Activities (PTP):</label>
+  <textarea id="vault" rows="2"></textarea>
+
+  <label for="ai">🧠 AI Tools Used:</label>
+  <textarea id="ai" rows="2"></textarea>
+
+  <label for="maint">🛠️ Maintenance Tasks:</label>
+  <textarea id="maint" rows="2"></textarea>
+
+  <label for="leisure">🎮 Leisure Activities:</label>
+  <textarea id="leisure" rows="2"></textarea>
+
+  <button onclick="calculateTokens()">🧮 Calculate My Day</button>
+
+  <div class="output" id="output"></div>
 
   <script>
-    const user = {
-      dailyTokens: 1440,
-      sleepHours: 7,
-      workHours: 8,
-      weeklyWorkDays: 5,
-      yearlyWeeks: 50,
-      hourlyWage: 35,
-      aiToolsEnabled: true,
-      vaultActivities: [1, 1, 1],
-      maintenanceTasks: [1, 1],
-      leisure: [1, 1, 1, 1]
-    };
+    function calculateTokens() {
+      const dailyTokens = 1440;
+      const wage = parseFloat(document.getElementById('wage').value);
+      const sleep = parseFloat(document.getElementById('sleep').value);
+      const work = parseFloat(document.getElementById('work').value);
+      const vault = document.getElementById('vault').value.split(',').filter(x => x.trim() !== '').length;
+      const ai = document.getElementById('ai').value.split(',').filter(x => x.trim() !== '').length;
+      const maint = document.getElementById('maint').value.split(',').filter(x => x.trim() !== '').length;
+      const leisure = document.getElementById('leisure').value.split(',').filter(x => x.trim() !== '').length;
 
-    function calculateZones(user) {
-      const sleepTokens = user.sleepHours * 60;
-      const livelihoodTokens = user.workHours * 60;
-      const onTimeTokens = user.dailyTokens - sleepTokens - livelihoodTokens;
-      const valuePerWorkMinute = (user.hourlyWage / 60).toFixed(2);
-      return {
-        sleep: sleepTokens,
-        livelihood: livelihoodTokens,
-        onTime: onTimeTokens,
-        valuePerMinute: `$${valuePerWorkMinute}`
-      };
-    }
+      const sleepTokens = sleep * 60;
+      const workTokens = work * 60;
+      const onTime = dailyTokens - sleepTokens - workTokens;
+      const valuePerMinute = (wage / 60).toFixed(2);
 
-    function categorizeOnTimeTokens(user) {
-      const vault = user.vaultActivities.length * 3;
-      const aiBoost = user.aiToolsEnabled ? vault * 10 : 0;
-      const maintenance = user.maintenanceTasks.length;
-      const leisure = user.leisure.length * -1;
-      return { vaultPTP: vault, aiBoost, maintenance, leisure };
-    }
+      const vaultTokens = vault * 3;
+      const aiTokens = ai * 10;
+      const maintTokens = maint;
+      const leisureTokens = leisure * -1;
 
-    function dashboard(user) {
-      const zones = calculateZones(user);
-      const tokenCategories = categorizeOnTimeTokens(user);
-      const totalUtilized = tokenCategories.vaultPTP + tokenCategories.aiBoost + tokenCategories.maintenance + tokenCategories.leisure;
-      const remaining = zones.onTime - totalUtilized;
+      const used = vaultTokens + aiTokens + maintTokens + leisureTokens;
+      const remaining = onTime - used;
 
-      const output = `
-👋 Welcome to 1440TIME™
-
-📘 Sleep Zone: ${zones.sleep} tokens
-💼 Livelihood Zone: ${zones.livelihood} tokens at ${zones.valuePerMinute}/min
-
-🚀 On-Time Zone: ${zones.onTime} tokens
-
-🔐 Vault/Goals (PTP): ${tokenCategories.vaultPTP} tokens
-🧠 1440X Boost (AI-enhanced): ${tokenCategories.aiBoost} tokens
-🧰 Maintenance: ${tokenCategories.maintenance} tokens
-📖 Leisure: ${tokenCategories.leisure} tokens
-
-💡 Remaining Tokens Today: ${remaining} (Spend them wisely!)
+      document.getElementById('output').innerHTML = `
+        <p>💤 Sleep Zone: ${sleepTokens} tokens</p>
+        <p>💼 Livelihood Zone: ${workTokens} tokens at $${valuePerMinute}/min</p>
+        <p>🚀 On-Time Zone: ${onTime} tokens</p>
+        <p>🔒 Vault (PTP): ${vaultTokens} tokens</p>
+        <p>🧠 AI Boost: ${aiTokens} tokens</p>
+        <p>🛠️ Maintenance: ${maintTokens} tokens</p>
+        <p>🎮 Leisure: ${leisureTokens} tokens</p>
+        <p>💡 Remaining Tokens Today: ${remaining} (Spend them wisely!)</p>
       `;
-
-      document.getElementById('dashboard').textContent = output;
     }
-
-    dashboard(user);
   </script>
 </body>
 </html>
